Fix up footer spacing

--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -55,6 +55,8 @@ body.landing {
 }
 
 footer {
+  padding-top: 20px;
+  padding-bottom: 20px;
   background-color: #BDC3C7;
   color: #ECF0F1;
   a {
